@@ -12,6 +12,10 @@
     <name>restspringmvcfive-parent</name>
     <description>RESTful Webservices with Spring MVC 5 Guru</description>
 
+    <modules>
+        <module>rest-model</module>
+        <module>restspringmvcfive-app</module>
+    </modules>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -21,12 +25,12 @@
     </parent>
 
 
-    <modules>
-        <module>rest-model</module>
-        <module>restspringmvcfive-app</module>
-    </modules>
-
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>11</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
         <org.codehaus.mojo.version>2.7</org.codehaus.mojo.version>
         <org.apache.maven.plugins.failsafe.version>2.22.2</org.apache.maven.plugins.failsafe.version>
@@ -185,26 +189,42 @@
                     </execution>
                 </executions>
             </plugin>
-
-            <!--        copy from sample : store_test_results-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>2.22.0</version>
                 <configuration>
-                    <useSystemClassLoader>false</useSystemClassLoader>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <!--MapStruct plugin work with lombok annotation-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version> <!-- or newer version -->
+                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>11</source> <!-- depending on your project -->
-                    <target>11</target> <!-- depending on your project -->
-                    <!--                    <fork>true</fork>
-                                        <executable>C:\Program Files\Java\jdk1.8.0_31\bin\javac</executable>-->
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
